changed breakpoint to 1215px to avoid horizontal scroll and organized file

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -9,7 +9,6 @@ hr{
 #content{
 	font-family: 'Abel';
 }
-
 #content > div{
 	overflow: auto;
 }
@@ -48,6 +47,7 @@ hr{
 	font-family: 'News Cycle';
 	font-size: 10px;
 }
+
 #welcome{
 	padding: 0 0 30px 0;
 }
@@ -58,6 +58,7 @@ hr{
 	margin-left: 20px;
 	margin-right: 20px;
 }
+
 #services{
 	padding: 30px 0 30px 0; /*top right bottom left*/
 }
@@ -107,11 +108,11 @@ hr{
 	margin: 0;
 }
 
-@media (max-width: 1205px) { /*makes services content reponsive - only quick fix need to come back to this*/
+@media (max-width: 1215px) { /*makes services content reponsive - only quick fix need to come back to this*/
 	#services > div{
 		display: block;
 		width: 90%;
-		margin-left: 5%;
+		margin-left: 4%; /*not 5% bc outer div has margins*/
 		padding-bottom: 20px;
 	}
 }
